[package]
name = "vkcore-rs"
version = "0.2.3"
edition = "2024"
authors = ["0xAA55 <838816058@qq.com>"]
readme = "Readme.md"
license-file = "LICENSE"
description = "The Vulkan core functions for Rust"
repository = "https://github.com/0xAA55/vkcore-rs"
keywords = ["Vulkan", "GLFW", "GameEngine", "Render", "GPU"]

[dev-dependencies]
glfw = { version = "0.59.0", features = ["vulkan", "image"] }

[profile.release]
lto = "fat"
