[package]
name = "vkcore-rs"
version = "0.5.7"
edition = "2024"
authors = ["0xAA55 <838816058@qq.com>"]
readme = "Readme.md"
license-file = "LICENSE"
description = "The Vulkan core functions for Rust"
repository = "https://github.com/0xAA55/vkcore-rs"
keywords = ["Vulkan", "GLFW", "GameEngine", "Render", "GPU"]

[dependencies]
glfw = { version = "0.59.0", features = ["vulkan", "image"], optional = true }

[dev-dependencies]
glfw = { version = "0.59.0", features = ["vulkan", "image"] }

[profile.release]
lto = "fat"

[features]
glfw = ["dep:glfw"]
win32_khr = []
android_khr = []
ios_mvk = []
macos_mvk = []
metal_ext = []
wayland_khr = []
xcb_khr = []
catch_nullptr = []
validation_layer = []
api_dump = []
